# scamplers

./: .env.sample  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqruff  Cargo.toml  README.md  build.rs  compose.build.yaml  compose.run.yaml  compose.sh  compose.yaml  db_container_id.txt  delete-all-and-restart.dev.sh  dev-test_db.sql  diesel.toml  f.csv  generate_test_data.py  hard-restart.dev.sh  run.test.sh  s.py  seed_data.json  seed_data.sample.json
.github/: dependabot.yml
.github/draft-workflows/: push_scamplers-backend.yml
.github/npm-dependencies/: package.json
.github/workflows/: build-containers.yml  rust.yml  sql.yml  typescript.yml  wasm.yml
caddy/: Caddyfile
db/: .sqlfluffignore  Dockerfile
db/docker-entrypoint-initdb.d/: create-users.sh
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/00018_session/: up.sql
migrations/0001_institution/: up.sql
migrations/0001_institutions/: down.sql  up.sql
migrations/0002_people/: down.sql  up.sql
migrations/0002_person/: up.sql
migrations/0003_lab/: up.sql
migrations/0003_labs/: down.sql  up.sql
migrations/0004_sample-metadata/: down.sql  up.sql
migrations/0005_measurement/: up.sql
migrations/0005_measurements/: down.sql  up.sql
migrations/0005_specimen/: up.sql
migrations/0006_dataset-metadata/: down.sql  up.sql
migrations/0006_specimen/: up.sql
migrations/0006_specimens/: down.sql  up.sql
migrations/0007_10x-chemistry/: down.sql  up.sql
migrations/0007_dataset-metadata/: up.sql
migrations/0008_10x-chemistries/: down.sql  up.sql
migrations/0008_chemistries/: up.sql
migrations/0009_10x-index-set/: up.sql
oldrust/: .gitignore  Dockerfile
pre-commit_scripts/: build-scamplers-core.sh  fix-rust.sh  fix-typescript.sh
python/: pyproject.toml
python/scamplepy/: pyproject.toml
python/scamplers-auth/: Dockerfile  Dockerfile_old  main.py  msal_config.py  pyproject.toml
python/scamplers-auth/scamplers_auth/: main.py
rust/: .gitignore  Cargo.toml  Dockerfile  build.rs  check-schema.sh  dev.sh  diesel.toml  generate_schema_patch.py  rustfmt.toml  start-backend.dev.sh  test.sh  tree
rust/.cargo/: config.toml
rust/build-scamplers/: Cargo.toml
rust/build-scamplers/src/: schema.patch  schema_patch.rs
rust/chrono/: Cargo.toml
rust/chrono/src/: lib.rs
rust/migrations/00000000000000_diesel_initial_setup/: up.sql
rust/migrations/0002_person/: down.sql
rust/migrations/0010_sequencing-run/: up.sql
rust/migrations/0012_suspension/: up.sql
rust/migrations/0017_web-session/: up.sql
rust/scamplers/: .gitignore  Cargo.toml  Dockerfile  build.rs  diesel.toml  rustfmt.toml
rust/scamplers-backend/: Cargo.toml  build.rs
rust/scamplers-backend/src/: auth.rs  cli.rs  config.rs  db.rs  lib.rs  main.rs  schema.patch  schema.rs  schema_patch.rs  seed_data.rs  server.rs  test_util.rs
rust/scamplers-backend/src/api/: v0.rs
rust/scamplers-backend/src/db/: cdna.rs  chromium_library.rs  error.rs  lab.rs  model.rs  person.rs  sample.rs  seed_data.rs  test_util.rs  util.rs  utils.rs  web_session.rs
rust/scamplers-backend/src/db/dataset/: chromium.rs
rust/scamplers-backend/src/db/model/: chromium.rs  institution.rs  lab.rs  person.rs  sample_metadata.rs  specimen.rs
rust/scamplers-backend/src/db/sample/: specimen.rs  suspension.rs  suspension_measurement.rs
rust/scamplers-backend/src/db/seed_data/: admin.rs  index_set.rs
rust/scamplers-backend/src/server/: api.rs  auth.rs  util.rs
rust/scamplers-backend/src/server/api/: error.rs  handler.rs
rust/scamplers-backend/tests/: integration.rs
rust/scamplers-core/: Cargo.toml  pyproject.toml  scamplers-core.pyi
rust/scamplers-core/src/: client.rs  endpoint.rs  institution.rs  lib.rs  model.rs  person.rs
rust/scamplers-core/src/model/: chromium.rs  institution.rs  lab.rs  person.rs  sample_metadata.rs  specimen.rs
rust/scamplers-core/src/model/specimen/: block.rs  common.rs  core.rs  tissue.rs
rust/scamplers-macros/: Cargo.toml
rust/scamplers-macros/src/: lib.rs  macros.rs
rust/scamplers-macros/src/macros/: backend.rs  client.rs  common.rs  frontend.rs
rust/scamplers-schema/: Cargo.toml  build.rs  diesel.toml
rust/scamplers-schema/src/: lib.rs
rust/scamplers/migrations/0001_institution/: down.sql
rust/scamplers/migrations/0003_lab/: up.sql
rust/scamplers/migrations/0004_sample-metadata/: down.sql
rust/scamplers/migrations/0005_specimen/: down.sql  up.sql
rust/scamplers/migrations/0008_10x-index-set/: down.sql
rust/scamplers/migrations/0013_chromium-run/: down.sql
rust/scamplers/migrations/0016_chromium-dataset/: up.sql
rust/scamplers/migrations/0017_web-session/: down.sql
rust/scamplers/src/: api.rs  auth.rs  cli.rs  db.rs  lib.rs  main.rs  schema.patch  schema.rs  schema_patch.rs  seed_data.rs  session.rs  utils.rs
rust/scamplers/src/api/: v0.rs
rust/scamplers/src/db/: cdna.rs  chemistry.rs  chromium_library.rs  chromium_run.rs  dataset.rs  index_sets.rs  institution.rs  lab.rs  library_type_specification.rs  measurement.rs  multiplexed_suspension.rs  nucleic_acid_measurement.rs  person.rs  sample.rs  sequencing_run.rs  units.rs  utils.rs  web_session.rs
rust/scamplers/src/db/dataset/: chromium.rs
rust/scamplers/src/db/sample/: multiplexed_suspension.rs  specimen.rs  suspension.rs  suspension_measurement.rs
rust/src/: api.rs  db.rs  lib.rs  main.rs  models.rs  schema.patch  schema.rs  schema_patch.rs  seed_data.rs  static_files.rs
rust/src/api/: api_key.rs  v0.rs
rust/src/db/: index_sets.rs  institution.rs  person.rs
rust/src/models/: institution.rs  person.rs
rust/src/models/person/: user.rs
rust/uuid/: Cargo.toml
rust/uuid/src/: lib.rs
schema/: institution.json  new_institution.json  specimen.json  updated_institution.json
scripts/: build-scamplers-core.sh  check-rust.sh  fix-rust.sh  fix-sql.sh  prepare-dependabot-package-json.sh
src/: api_v1.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  mongo.rs  nf_tenx.rs  schema.rs  tenx.rs
src/db/: institutions.rs  (+2 more)
typescript/: .gitignore  Dockerfile  package-lock.json  package.json
(+180 files in other folders)
