[package]
name = "scamplers2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
glob = "0.3.1"
mongodb = { version = "2.8.2", features = ["sync"], default-features = false }
serde = "1.0.198"
serde_json = "1.0.116"
