[workspace]
resolver = "2"
members = [ "scamplers-backend","scamplers-core", "scamplers-schema"]
default-members = ["scamplers-core"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
camino = { version = "1.1.9" }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v7", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140"}
diesel = { version = "2.2.9", default-features = false, features = [
    "without-deprecated",
    "chrono",
    "uuid",
    "serde_json",
] }
chrono = { version = "0.4.40", features = ["serde"] }
valuable = { version = "0.1.1", features = ["derive"] }
garde = { version = "0.22.0", features = ["derive", "email", "serde", "regex"] }
strum = { version = "0.27.1", features = ["derive"] }
scraper = { version = "0.23.1", features = ["serde"] }
pyo3 = {version = "0.24.0", features = ["uuid"] }
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
dotenvy = { version = "0.15.7" }
testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
