[workspace]
resolver = "2"
members = [
    "scamplers-backend",
    "scamplers-core",
    "scamplers-macros",
    "scamplers-schema",
    "uuid",
]
default-members = ["scamplers-backend"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive", "env"] }
anyhow = "1.0.98"
axum = { version = "0.8.4", default-features = false, features = [
    "http2",
    "json",
    "macros",
    "query",
    "tokio",
] }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
regex = "1.11.1"
axum-extra = { version = "0.10.1", features = ["typed-header", "query"] }
camino = { version = "1.1.10" }
thiserror = "2.0.12"
_uuid = { package = "uuid", version = "1.16.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
diesel = { version = "2.2.10", default-features = false, features = [
    "without-deprecated",
    "chrono",
    "uuid",
    "serde_json",
] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = { version = "0.3.31" }
valuable = { version = "0.1.1", features = ["derive"] }
garde = { version = "0.22.0", features = ["derive", "email", "serde", "regex"] }
strum = { version = "0.27.1", features = ["derive"] }
scraper = { version = "0.23.1", features = ["serde"] }
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
dotenvy = { version = "0.15.7" }
testcontainers-modules = { version = "0.11.6", features = [
    "postgres",
    "blocking",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
tracing-appender = "0.2.3"
tracing = { version = "0.1.41", features = ["valuable"] }
tower = { version = "0.5.2", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
argon2 = "0.5.3"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
rand = "0.9.1"
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
    "json",
] }
url = { version = "2.5.4", features = ["serde"] }
syn = { version = "2.0.101", features = ["full"] }
quote = { version = "1.0.40" }
heck = { version = "0.5.0" }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen-futures = { version = "0.4.50" }
derive_builder = { version = "0.20.2" }
pretty_assertions = { version = "1.4.1" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
async_fn_in_trait = "allow"
