[project]
name = "scamplers-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ahmed Said", email = "ahmed.said@jax.org" }]
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "msal>=1.32.0",
    "pydantic-settings>=2.8.1",
    "sanic>=24.12.0",
]
