[package]
name = "build-scamplers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "build-scamplers"
path = "../scamplers/build.rs"

[dependencies]
testcontainers-modules = { workspace = true, features = ["blocking"] }
camino = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
