[package]
name = "scamplers-backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
scamplers-core = { path = "../scamplers-core", features = ["backend"] }
scamplers-schema = { path = "../scamplers-schema" }
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
garde = { workspace = true }
uuid = { path = "../uuid", features = ["backend"] }
thiserror = { workspace = true }
valuable = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
testcontainers-modules = { workspace = true }
diesel_migrations = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
argon2 = { workspace = true }
axum-extra = { workspace = true }
rand = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
