[project]
name = "scamplers-core"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [{ name = "Ahmed Said", email = "ahmed.said@jax.org" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
