[package]
name = "scamplers"
version = "0.1.0"
edition = "2024"
authors = ["Ahmed Said <ahmed.said@jax.org>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
diesel_migrations = { workspace = true }
diesel-async = { workspace = true }
tracing-appender = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
valuable = { workspace = true }
argon2 = { workspace = true }
garde = { workspace = true }
toml = { workspace = true }
testcontainers-modules = { workspace = true }
schemars = { workspace = true }
tower-http = { workspace = true }
strum = { workspace = true }
heck = { workspace = true }
scraper = { workspace = true }
dotenvy = { workspace = true }
rand = {workspace = true}

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
testcontainers-modules = { workspace = true, features = ["blocking"] }
camino = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
