[package]
name = "uuid"
version = "0.1.0"
edition.workspace = true

[dependencies]
_uuid = {workspace = true}
serde = {workspace = true, optional = true }
diesel = {workspace = true, optional = true }
valuable = {workspace = true, optional = true}
pyo3 = {workspace = true, optional = true}
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true

[features]
backend = ["serde", "diesel", "valuable"]
python = ["pyo3"]
web = ["wasm-bindgen", "_uuid/js"]
