[package]
name = "uuid"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
_uuid = {workspace = true}
serde = {workspace = true, optional = true }
diesel = {workspace = true, optional = true }
diesel-async = {workspace = true, optional = true}
valuable = {workspace = true, optional = true}
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true

[features]
backend = ["serde", "diesel", "valuable", "_uuid/serde", "_uuid/v7", "diesel-async"]
web = ["wasm-bindgen", "_uuid/js"]
